# ImageStuff

./: CMakeLists.txt  README.md  build.sh
headers/: oriPaths.h
src/: main.c  oriPaths.c
